fix bug where alignment misplaced.

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -1155,7 +1155,7 @@
 
 .hanzi-variants a span {
     position: relative;/*add by wxf*/
-    display: block;
+    /*display: block;*/
     width: 50px;
     height: 50px;
     font-size: 38px;
